# ade

./: README.md  packed.cpp  tags
archive/fl/: main
archive/flatiron/: num_of_islands.cpp  rpn.cpp
archive/lu/: bit.cpp  main  pointer.cpp  pub_sub.cpp  test.cpp
archive/lucera/: is_same.cpp  virtual.cpp
archive/matching_engine/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  core  main  main.cpp  main_ut  script1.txt  script3.txt  script5.txt
archive/orders/: README  build_orders.sh  results.csv
archive/orders/data/: orders.csv  (+3 more)
archive/qu/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  input.csv  main.cpp  test.cpp
archive/quantlab/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  main.cpp.backup  main_ut  output.csv  tags
archive/simple_order_book/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  main_ut  output  script.txt  script1.txt  test.cpp
archive/simple_order_book/ming_xiong_cboe/: main
archive/symbol_stats/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  main_ut  output.csv  tags
archive/th/: mars.py
archive/to/: double_dispatch.cpp  perfect_forward.cpp  remove_erase.cpp  remove_space.cpp  segment_length.cpp  virtual.cpp
archive/top_ten_symbols/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main_ut  result  top_volumes_rank.hpp
archive/tower/: main
archive/tweetsenti/: config.py  tags
(+30 files in other folders)
